Fix #638 - Revise the sticky promo to be hidden by default and require an appended class to show and add a helper class to show the sticky promo on page load

--- a/src/assets/sass/protocol/components/_sticky-promo.scss
+++ b/src/assets/sass/protocol/components/_sticky-promo.scss
@@ -25,12 +25,7 @@ $logos: (
 }
 
 .mzp-c-sticky-promo {
-    @include bidi(((animation-name, mzp-a-slide-in-right, mzp-a-slide-in-left),));
-    @include bidi((
-        (right, $spacing-md, auto),
-        (left, auto, $spacing-md),
-    ));
-    animation: 600ms ease 1500ms both;
+
     background-color: $color-white;
     border-radius: $border-radius-sm;
     bottom: 0;
@@ -41,6 +36,15 @@ $logos: (
     position: fixed;
     width: $content-xs;
     z-index: 10;
+    animation: 600ms ease 1500ms both;
+
+    &.mzp-a-slide-in {
+        @include bidi(((animation-name, mzp-a-slide-in-right, mzp-a-slide-in-left),));
+        @include bidi((
+            (right, $spacing-md, auto),
+            (left, auto, $spacing-md),
+        ));
+    }
 
     &.mzp-a-fade-out {
         @include animation(mzp-a-fade-out 100ms ease 5ms both);
@@ -106,4 +110,3 @@ $logos: (
         background: transparent url("#{$image-path}/icons/close-white.svg") center center no-repeat;
     }
 }
-
